feat: front login

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,30 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 .logo {
   width: 120px;
   height: 31px;
   background: rgba(255, 255, 255, 0.2);
   margin: 16px 28px 16px 0;
-  float: left;
 }
-.avatar {
+.my-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /*
+  background-color: blueviolet;
+  */
+}
+.ant-layout-sider-children {
+  height: 70vh;
+}
+
+.login-form {
+  max-width: 300px;
+  margin: 0 auto;
+}
+.login-form-forgot {
   float: right;
+}
+.login-form-button {
+  width: 100%;
 }
