--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ code {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(60, 156, 230, 0.6);
+  background-color: rgb(60, 156, 230);
   height: 75px;
 }
 
